syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.deviniciative.grpcFortune";
option java_outer_classname = "FortuneProto";

service Fortune {
  rpc CallFortune (FortuneRequest) returns (FortuneReply) {}
}

message FortuneRequest {
  string name = 1;
}

message FortuneReply {
  string message = 1;
}